# SEC-earnings-workbench

./: .env.example  .gitignore  AIRBYTE.md  Cargo.toml  GHOST.md  README.md  SEC-earnings-workbench-deck.html  pyproject.toml
.chp/: ADVERSARIAL_PROMPTS.md  CHP_COMPLIANCE.md  R0_CONFIG.yaml  STATE_MACHINE.md
docs/: AI_GOVERNANCE.md
examples/: research_bench_examples.sh
notebooks/: fabric_peer_batch.py  fabric_research_pipeline.py  fabric_setup_lakehouse.py
src/cme/: __init__.py  cli.py
src/cme/ai/: __init__.py  foundry.py
src/cme/chp/: __init__.py  certification.py  devil.py  models.py  orchestrator.py  registry.py  validators.py
src/cme/db/: __init__.py  cockroachdb_layer.py
src/cme/fabric/: __init__.py  client.py
src/cme/finance/: __init__.py
src/cme/research/: __init__.py  artifacts.py  audit.py  briefs.py  dossier_builders.py  orchestrator.py
src/cme/research/data/: __init__.py  alphavantage.py  cache.py  edgar.py  fred.py
src/demo/: __init__.py  diligence_agent.py  fundamentals_agent.py  markets_agent.py  research_demo.py
tests/: test_basic.py  test_certification.py  test_chp_basics.py  test_chp_registry_cli_flow.py  test_research_workbench.py
