[package]
name = "sec-earnings-workbench"
version = "0.1.0"
edition = "2021"
authors = ["Shyam Desigan <sam@cubiczan.com>"]
license = "MIT"
description = "SEC filing and earnings analysis workbench for the Cubiczan ML ecosystem"

[dependencies]
cubiczan-ml-core = { git = "https://github.com/icohangar-ops/cubiczan-ml" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "2"
anyhow = "1"
